read input, introduce LINE

--- a/local/DEVBOARDM7/board.cfg
+++ b/local/DEVBOARDM7/board.cfg
@@ -46,4 +46,4 @@ H00 	OSC_IN SYS 0
 H01 	OSC_OUT SYS 0
 # ACTIVE PINS
 PC00	LED1		OUTPUT  PUSHPULL HIGH FLOATING HIGH AF0
-PC01	SWITCH1		OUTPUT  PUSHPULL HIGH FLOATING HIGH AF0
+PC01	SWITCH1		INPUT   PUSHPULL HIGH PULLUP   LOW AF0
