commit initial tp02

--- a/local/DEVBOARDM7/board.cfg
+++ b/local/DEVBOARDM7/board.cfg
@@ -45,5 +45,7 @@ C15 	OSC32_OUT SYS 0
 H00 	OSC_IN SYS 0
 H01 	OSC_OUT SYS 0
 # ACTIVE PINS
+PB06	UART1_TX	UART	AF7
+PB07	UART1_RX	UART	AF7
 PC00	LED1		OUTPUT  PUSHPULL HIGH FLOATING HIGH AF0
-PC01	SWITCH1		INPUT   PUSHPULL HIGH PULLUP   LOW AF0
+
