--- a/local/DEVBOARDM7/board.cfg
+++ b/local/DEVBOARDM7/board.cfg
@@ -28,16 +28,16 @@ HEADER
 /*
  * MCU type as defined in the ST header.
  */
-#define STM32F746xx
+#define STM32F756xx
 
 
 CONFIG
 # PIN NAME PERIPH_TYPE AF_NUMBER or
 # PIN NAME FUNCTION PP_or_OPENDRAIN PIN_SPEED PULL_RESISTOR INITIAL_LEVEL AF_NUMBER
-# SPEED : VERYLOW, LOW, MEDIUM, HIGH
+# SPEED : SPEED_VERYLOW,  SPEED_LOW,  SPEED_MEDIUM,  SPEED_HIGH
 #
 # DEFAULT AND SYS
-DEFAULT INPUT PUSHPULL HIGH PULLDOWN LOW 0
+DEFAULT INPUT PUSHPULL SPEED_VERYLOW PULLDOWN LEVEL_LOW 0
 A13 	SWDIO SYS 0
 A14 	SWCLK SYS 0
 C14 	OSC32_IN SYS 0
@@ -47,5 +47,4 @@ H01 	OSC_OUT SYS 0
 # ACTIVE PINS
 PB06	UART1_TX	UART	AF7
 PB07	UART1_RX	UART	AF7
-PC00	LED1		OUTPUT  PUSHPULL HIGH FLOATING HIGH AF0
-
+PC00	LED1		OUTPUT  PUSHPULL  SPEED_VERYLOW FLOATING LEVEL_HIGH AF0
