--- a/local/DEVBOARDM7/board.cfg
+++ b/local/DEVBOARDM7/board.cfg
@@ -1,4 +1,5 @@
 MCU_CORE = F7
+MCU_FAMILY = F767
 CHIBIOS_VERSION = 3.0
 
 HEADER
@@ -28,7 +29,7 @@ HEADER
 /*
  * MCU type as defined in the ST header.
  */
-#define STM32F756xx
+#define STM32F767xx
 
 
 CONFIG
