--- a/local/DEVBOARDM7/board.cfg
+++ b/local/DEVBOARDM7/board.cfg
@@ -1,13 +1,12 @@
-MCU_CORE = F7
-MCU_FAMILY = F767
+MCU_MODEL = STM32F767V(G-I)Tx
 CHIBIOS_VERSION = 3.0
 
 HEADER
 /*
  * Board identifier.
  */
-#define BOARD_DEVBOARDM7
-#define BOARD_NAME                  "Gorraz DevboardM7"
+#define DevboardM767
+#define BOARD_NAME                  "Gorraz DevboardM767"
 
 /*
  * Board oscillators-related settings.
@@ -34,18 +33,27 @@ HEADER
 
 CONFIG
 # PIN NAME PERIPH_TYPE AF_NUMBER or
-# PIN NAME FUNCTION PP_or_OPENDRAIN PIN_SPEED PULL_RESISTOR INITIAL_LEVEL AF_NUMBER
-# SPEED : SPEED_VERYLOW,  SPEED_LOW,  SPEED_MEDIUM,  SPEED_HIGH
+# PIN NAME FUNCTION PUSHPULL|OPENDRAIN PIN_SPEED PULLUP|PULLDOWN|FLOATING LEVEL_LOW|LEVEL_HIGH AF_NUMBER
+# simplified config for INPUT and OUTPUT
+# PIN NAME INPUT PULLUP|PULLDOWN|FLOATING
+# PIN NAME OUTPUT PUSHPULL|OPENDRAIN PIN_SPEED PULLUP|PULLDOWN|FLOATING LEVEL_LOW|LEVEL_HIGH
 #
-# DEFAULT AND SYS
-DEFAULT INPUT PUSHPULL SPEED_VERYLOW PULLDOWN LEVEL_LOW 0
-A13 	SWDIO SYS 0
-A14 	SWCLK SYS 0
-C14 	OSC32_IN SYS 0
-C15 	OSC32_OUT SYS 0
-H00 	OSC_IN SYS 0
-H01 	OSC_OUT SYS 0
+# PIN_SPEED : SPEED_VERYLOW, SPEED_LOW, SPEED_MEDIUM, SPEED_HIGH
+# PERIPH_TYPE : SYS, ADC, PWM, ICU, I2C, SPI, UART, OTG, ETH, SDIO, SDIOCK,
+#
+# SYSTEM
+A13 	SWDIO	  SYS  AF:SYS_JTMS-SWDIO
+A14 	SWCLK	  SYS  AF:SYS_JTCK-SWCLK
+C14 	OSC32_IN  SYS  AF0
+C15 	OSC32_OUT SYS  AF0
+H00 	OSC_IN    SYS  AF0
+H01 	OSC_OUT   SYS  AF0
+
+#DEFAULT
+DEFAULT			INPUT	PUSHPULL SPEED_VERYLOW PULLDOWN LEVEL_LOW  AF0
+
 # ACTIVE PINS
-PB06	UART1_TX	UART	AF7
-PB07	UART1_RX	UART	AF7
-PC00	LED1		OUTPUT  PUSHPULL  SPEED_VERYLOW FLOATING LEVEL_HIGH AF0
+PB06    SHELL_TX		UART	AF:USART1_TX
+PB07    SHELL_RX		UART	AF:USART1_RX
+PC00    LED1            OUTPUT  PUSHPULL   SPEED_VERYLOW FLOATING LEVEL_HIGH 
+
