--- a/local/DEVBOARDM7/board.cfg
+++ b/local/DEVBOARDM7/board.cfg
@@ -1,5 +1,4 @@
-MCU_CORE = F7
-MCU_FAMILY = F767
+MCU_MODEL = STM32F767V(G-I)Tx
 CHIBIOS_VERSION = 3.0
 
 HEADER
@@ -38,14 +37,17 @@ CONFIG
 # SPEED : SPEED_VERYLOW,  SPEED_LOW,  SPEED_MEDIUM,  SPEED_HIGH
 #
 # DEFAULT AND SYS
-DEFAULT INPUT PUSHPULL SPEED_VERYLOW PULLDOWN LEVEL_LOW 0
-A13 	SWDIO SYS 0
-A14 	SWCLK SYS 0
-C14 	OSC32_IN SYS 0
-C15 	OSC32_OUT SYS 0
-H00 	OSC_IN SYS 0
-H01 	OSC_OUT SYS 0
+A13 	SWDIO     SYS  AF:SYS_JTMS-SWDIO
+A14 	SWCLK     SYS  AF:SYS_JTCK-SWCLK
+C14 	OSC32_IN  OSC  
+C15 	OSC32_OUT OSC  
+H00 	OSC_IN    OSC  
+H01 	OSC_OUT   OSC  
+
+DEFAULT INPUT PUSHPULL SPEED_VERYLOW PULLDOWN LEVEL_LOW AF0
+
+
 # ACTIVE PINS
-PB06	UART1_TX	UART	AF7
-PB07	UART1_RX	UART	AF7
+PB06	UART1_TX	UART	AF:USART1_TX
+PB07	UART1_RX	UART	AF:USART1_RX
 PC00	LED1		OUTPUT  PUSHPULL  SPEED_VERYLOW FLOATING LEVEL_HIGH AF0
