portage to chibios 17.6

--- a/local/DEVBOARDM7/board.cfg
+++ b/local/DEVBOARDM7/board.cfg
@@ -1,4 +1,4 @@
-MCU_MODEL = STM32F767V(G-I)Tx
+MCU_MODEL = STM32F767VGTx
 CHIBIOS_VERSION = 3.0
 
 HEADER
@@ -14,6 +14,8 @@ HEADER
 #if !defined(STM32_LSECLK)
 #define STM32_LSECLK                32768U
 #endif
+
+#define STM32_LSEDRV                (3U << 3U)
 
 #if !defined(STM32_HSECLK)
 #define STM32_HSECLK                16000000U
